--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@types/leaflet-routing-machine": "^3.2.8",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "next": "15.1.2",
     "next-intl": "^3.26.3",
     "papaparse": "^5.4.1",
