--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "papaparse": "^5.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
     "react-leaflet-markercluster": "^4.2.1"
   },
