--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "leaflet-routing-machine": "^3.2.12",
     "next": "15.1.2",
     "next-intl": "^3.26.3",
+    "openrouteservice-js": "^0.4.1",
     "papaparse": "^5.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
